--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.10.1",
     "sass": "^1.63.4",
+    "tsparticles": "^2.10.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
